--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">MyMapsApplication</string>
+    <string name="app_name">Lab2_3_Miguel_Mendez</string>
     <string name="title_activity_maps">Map</string>
     <string name="marker_detail_latlng">(%1$.2f, %2$.2f)</string>
 </resources>
